igt@i915_selftest@live@gt_lrc - incomplete - *ERROR* intel_gt_reset_global timed out, cancelling all in-flight rendering
http://gfx-ci.fi.intel.com/cibuglog-ng/testresult/1244101558?query_key=3879187515f1b74ffea4397743f9cc844aae61be
<6> [532.532773] pcieport 0000:00:1b.0: AER: Corrected error received: 0000:05:00.0
<4> [532.532789] nvme 0000:05:00.0: PCIe Bus Error: severity=Corrected, type=Physical Layer, (Receiver ID)
<4> [532.532792] nvme 0000:05:00.0: device [15b7:5006] error status/mask=00000001/0000e000
<4> [532.532794] nvme 0000:05:00.0: [ 0] RxErr (First)
<3> [537.638356] i915 0000:03:00.0: [drm] *ERROR* intel_gt_reset_global timed out, cancelling all in-flight rendering.
<6> [573.628922] pcieport 0000:00:1b.0: AER: Corrected error received: 0000:05:00.0
<4> [573.628958] nvme 0000:05:00.0: PCIe Bus Error: severity=Corrected, type=Physical Layer, (Receiver ID)
<4> [573.628971] nvme 0000:05:00.0: device [15b7:5006] error status/mask=00000001/0000e000
<4> [573.628984] nvme 0000:05:00.0: [ 0] RxErr (First)
<6> [583.829947] pcieport 0000:00:1b.0: AER: Corrected error received: 0000:05:00.0
<4> [583.829982] nvme 0000:05:00.0: PCIe Bus Error: severity=Corrected, type=Physical Layer, (Receiver ID)
<4> [583.829995] nvme 0000:05:00.0: device [15b7:5006] error status/mask=00000001/0000e000
<4> [583.830008] nvme 0000:05:00.0: [ 0] RxErr (First)
<3> [615.974026] INFO: task kworker/5:1:102 blocked for more than 61 seconds.
<3> [615.974141] Tainted: G U W 5.19.0-CI_DRM_11984-g39074ff3fbed+ #1
<3> [615.974162] "echo 0 > /proc/sys/kernel/hung_task_timeout_secs" disables this message.
<6> [615.974178] task:kworker/5:1 state:D stack:13112 pid: 102 ppid: 2 flags:0x00004000
<6> [615.974209] Workqueue: events intel_wedge_me [i915]
<6> [615.975111] Call Trace:
<6> [615.975124] <TASK>
<6> [615.975162] __schedule+0x483/0xb40
<6> [615.975225] schedule+0x3f/0xb0
<6> [615.975245] schedule_preempt_disabled+0xf/0x20
<6> [615.975262] __mutex_lock+0x830/0xf30
<6> [615.975289] ? mark_held_locks+0x48/0x80
<6> [615.975311] ? intel_gt_set_wedged.part.42+0x44/0x130 [i915]
<6> [615.976082] ? intel_gt_set_wedged.part.42+0x44/0x130 [i915]
<6> [615.976691] intel_gt_set_wedged.part.42+0x44/0x130 [i915]
<6> [615.977430] process_one_work+0x272/0x5c0
<6> [615.977467] ? 0xffffffff81000000
<6> [615.977497] worker_thread+0x37/0x370
<6> [615.977525] ? process_one_work+0x5c0/0x5c0
<6> [615.977541] kthread+0xed/0x120
<6> [615.977554] ? kthread_complete_and_exit+0x20/0x20
<6> [615.977581] ret_from_fork+0x1f/0x30
<6> [615.977653] </TASK>
<3> [615.977665] INFO: task kworker/5:1H:112 blocked for more than 61 seconds.
<3> [615.977689] Tainted: G U W 5.19.0-CI_DRM_11984-g39074ff3fbed+ #1
<3> [615.977707] "echo 0 > /proc/sys/kernel/hung_task_timeout_secs" disables this message.
<6> [615.977723] task:kworker/5:1H state:D stack:13736 pid: 112 ppid: 2 flags:0x00004000
<6> [615.977751] Workqueue: events_highpri heartbeat [i915]
<6> [615.978441] Call Trace: